--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,22 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <group android:scaleX="0.8957143"
+      android:scaleY="0.8957143"
+      android:translateX="1.2514286"
+      android:translateY="1.2514286">
+    <group android:scaleX="0.462"
+        android:scaleY="0.462"
+        android:translateX="6.456"
+        android:translateY="6.456">
+        <path android:fillColor="#FFA500" android:pathData="M20.57,10.66C20.43,10.26 20.05,10 19.6,10h-7.19c-0.46,0 -0.83,0.26 -0.98,0.66L10,14.77l0.01,5.51c0,0.38 0.31,0.72 0.69,0.72h0.62C11.7,21 12,20.62 12,20.24V19h8v1.24c0,0.38 0.31,0.76 0.69,0.76h0.61c0.38,0 0.69,-0.34 0.69,-0.72L22,18.91v-4.14L20.57,10.66zM12.41,11h7.19l1.03,3h-9.25L12.41,11zM12,17c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S12.55,17 12,17zM20,17c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1s1,0.45 1,1S20.55,17 20,17z"/>
+        <path android:fillColor="#808080" android:pathData="M14,9l1,0l0,-6l-8,0l0,5l-5,0l0,13l1,0l0,-12l5,0l0,-5l6,0z"/>
+        <path android:fillColor="#808080" android:pathData="M5,11h2v2h-2z"/>
+        <path android:fillColor="#808080" android:pathData="M10,5h2v2h-2z"/>
+        <path android:fillColor="#808080" android:pathData="M5,15h2v2h-2z"/>
+        <path android:fillColor="#808080" android:pathData="M5,19h2v2h-2z"/>
+    </group>
+  </group>
 </vector>
